Add button "На главную"

--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<a href="../home">На главную</a>
 <h2>Найдено кандидатов {{amount}}</h2>
 {%for candidate in candidates%}
 	<p><a href="/candidate/{{candidate.id}}">{{candidate.name}}</a></p>
