--- a/templates/card.html
+++ b/templates/card.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
+<a href="../home">На главную</a>
 <h1>{{candidate.name}}</h1>
 <p>{{candidate.position}}</p>
 <img src={{candidate.picture}} width=200>
